[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/CookingBench/CookingBenchCombine/CookingBenchCombine.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sourced/Texture/FOOD.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sourced/UI/Pixel UI Pack 3/07.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 598, 417, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 134, 16, 5 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 114, 135, 12, 3 )

[node name="Sprite" type="Sprite"]
texture = SubResource( 1 )
script = ExtResource( 1 )

[node name="StepTimer" type="Timer" parent="."]

[node name="ProgressBar" type="TextureProgress" parent="."]
visible = false
margin_left = -14.0
margin_top = -35.0
margin_right = 14.0
margin_bottom = -30.0
rect_min_size = Vector2( 28, 5 )
texture_under = SubResource( 2 )
texture_progress = SubResource( 3 )
nine_patch_stretch = true

[connection signal="timeout" from="StepTimer" to="." method="_on_StepTimer_timeout"]
